--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "mysql",
     "CRUD"
   ],
-  "engines": {
-    "node": "^14.19.1"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,12 +26,13 @@
     "db:pull": "npx prisma db pull && npx prisma generate"
   },
   "dependencies": {
-    "@mantine/core": "^4.1.2",
-    "@mantine/form": "^4.1.2",
-    "@mantine/hooks": "^4.1.2",
-    "@mantine/modals": "^4.1.2",
-    "@mantine/next": "^4.1.2",
-    "@mantine/notifications": "^4.1.2",
+    "@mantine/core": "^4.2.4",
+    "@mantine/dates": "^4.2.5",
+    "@mantine/form": "^4.2.5",
+    "@mantine/hooks": "^4.2.4",
+    "@mantine/modals": "^4.2.4",
+    "@mantine/next": "^4.2.5",
+    "@mantine/notifications": "^4.2.4",
     "@next/bundle-analyzer": "^12.1.4",
     "@prisma/client": "^3.12.0",
     "axios": "^0.27.2",
@@ -43,8 +41,8 @@
     "dayjs": "^1.11.2",
     "iron-session": "^6.1.2",
     "next": "^12.1.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
     "swr": "^1.3.0",
     "winston": "^3.7.2",
